ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echoserver
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: egress-nginx
  rules:
    - host: echoserver.coffeemart.xyz
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: echoserver
                port:
                  number: 443
  tls:
    - hosts:
      - echoserver.coffeemart.xyz
      secretName: echoserver-tls
